--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-  --hue-neutral: 187;
-  --hue-wrong: 0;
-  --hue-right: 145;
+  --hue-pres: 69;
+  --hue-past: 0;
+  --hue-future: 210;
   --hue-nav: 36;
 
   --width-side: 120px;
@@ -14,7 +14,7 @@ body {
 }
 
 textarea {
-  background: transparent!important;
+  background: transparent;
   border: none;
   resize: none;
   color: #000000;
@@ -45,6 +45,7 @@ textarea {
 }
 
 .text-block{
+  color: #333;
   height: 90px;
   min-width: 75%;
   padding: auto;
@@ -93,31 +94,51 @@ textarea {
 .past {
   background-color: #d3d3d3;
   color: white;
+  font-size: larger;
+  font-family: 'Raleway', sans-serif;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: hsl(var(--hue-pres), 50%, 90%);
+  box-shadow: 0 0 2px #999;
   color: white;
+  font-size: x-large;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: hsl(var(--hue-future), 20%, 80%);
   color: white;
+  font-size: larger;
+  font-family: 'Raleway', sans-serif;
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+  border-left: 1px solid hsl(var(--hue-future), 95%, 90%);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+  background-color: hsl(var(--hue-future), 50%, 25%);
+  color: hsl(var(--hue-future), 15%, 85%);
   min-width: 90px;
   height: 90px;
   padding: auto;
   margin: 0px;
 }
 
+.blur {
+  filter: blur(2px);
+}
+
 .saveBtn i:hover {
   font-size: 20px;
+  font-weight: 600;
+  color: hsl(var(--hue-pres), 50%, 90%);
   transition: all .3s ease-in-out;
+}
+
+textarea:hover {
+  filter: blur(0);
+  box-shadow: 0 0 5px #666;
+  background-color: white;
+  transition: all .5s ease-in-out;
 }
